fix: overflow issue in md editor, set shimmer loaders rows to 3

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1414,6 +1414,16 @@ button.anchor {
             }
         }
     }
+
+    &--lg {
+        &.radio-group {
+            height: 30px;
+
+            input + .radio__item-label {
+                padding-inline: 8px;
+            }
+        }
+    }
 }
 
 .manual-approvals-switch {
